[package]
name = "yakstack"
version = "0.3.0"
authors = ["Brose Johnstone <baby-bell@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.25", features = ["bundled"] }
#rusqlite = "0.25"
clap = "2"
thiserror = "1.0"

[profile.release]
lto = true
