[package]
name = "yakstack"
version = "0.3.0"
authors = ["Brose Johnstone <baby-bell@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = "3"
thiserror = "1.0"
notify-rust = "4"
regex = "1"

[profile.release]
lto = true
