[package]
name = "yakstack"
version = "0.3.3"
authors = ["Brose Johnstone <baby-bell@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
notify-rust = "4"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
